# celery-header-inject

./: .gitignore  .therapist.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: context.py  fastapi_middleware.py  producer.py  tasks.py
src/celery_context_headers/: __init__.py  sender.py
tests/: test_sender.py
